# rs-xdiff

./: Cargo.toml  Makefile  README.cn.md  README.md
examples/: config.rs  highlight.rs  json.rs
fixtures/: test.yml  xreq_test.yml
src/: cli.rs  config.rs  lib.rs  main.rs  req.rs  utils.rs
src/config/: mod.rs  xreq.rs
tests/cmd/: xdiff_run_failed.md  xdiff_run_succeed.md  xreq_run_succeed.md
