[package]
name = "rs_xdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
clap = { version="3.2.20", features = ["derive"] }
http-serde = "1.1.0"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.11"
similar = "2.2.0"
tokio = { version = "1.21.0", features = ["full"] }
url = { version = "2.2.2", features = ["serde"] }
